<resources>
    <string name="app_name">StatusAppBySyahrul</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your email and password to log in :)</string>
    <string name="title_login_page">Welcome to the Status App By Syahrul</string>
    <string name="name">Name</string>
    <string name="greeting">Hallo %1$s,</string>
    <string name="logout">Logout</string>
    <string name="tvLinkSignup">Don\'t have an account yet? </string>
    <string name="linkSignup">Click to register</string>
    <string name="tvDate">date created : %s</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Please enter an image file.</string>
    <string name="desc">Description</string>
    <string name="main">Random Story</string>
    <string name="descNotNull">The description must be filled in</string>
    <string name="detail_activity">Detail Status</string>
    <string name="err_login_result">Failed to login</string>
    <string name="err_signup_result">Failed to register</string>
    <string name="valid_email">Invalid email</string>
    <string name="valid_password">Password minimal 8 character</string>
    <string name="not_empty_form">All must be filled in</string>
    <string name="success_register">Your account has been successfully created. Come on, create your story now!</string>
    <string name="next">Next</string>
    <string name="yeah">Yeah!</string>
    <string name="language">Language</string>
    <string name="img_story">Image Store</string>
    <string name="maps_nav">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Try again</string>
    <string name="loc_permission">Allow tracking location  </string>
    <string name="post_story">post story</string>
</resources>